--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>rama master</h1>
+    <a href="/contacto.html"></a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsam, officiis at numquam sequi provident quae qui rerum! Atque rem doloremque consectetur quod adipisci ipsam distinctio temporibus hic architecto quidem.</p>
 </body>
 </html>
